# tgnj-app

./: .gitignore  README.md  TGNJ_Manager.spec  pyproject.toml
src/tgnj_app/: main.py
src/tgnj_app/core/: database.py  labelmaker.py  legacyUpload.py
src/tgnj_app/gui/: app.py
src/tgnj_app/gui/static/: script.js  style.css
src/tgnj_app/gui/templates/: index.html
